--- a/public/css/style.css
+++ b/public/css/style.css
@@ -237,6 +237,109 @@ body{
     font-size: 30pt;
 }
 
+.home-internal{
+    padding-top: 100px;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+}
 
+.home-internal h2{
+    font-size: 35pt;
+}
 
+#note{
+    background-color: #3699C7;
+    width: 15%;
+    color: white;
+    padding: 25px 50px 50px 50px;
+    margin-top: 20vh;
+    position: absolute;
+}
+
+#note h3{
+    font-size: 20pt;
+    font-weight: 900;
+    background-color:  #D53711;
+    padding: 10px;
+    width: 40px;
+    border-radius: 50px;
+    text-align: center;
+    margin: 0;
+    margin-top: -50px;
+}
+
+.number{
+    display: flex;
+    justify-content: center;
+}
+
+#img-home img{
+    max-width: 800px;
+}
+
+#img-home{
+    float: right;
+    width: 65%;
+    margin-top: 10vh;
+}
+
+.alt{
+    position: absolute;
+    margin-top: 80px;
+    text-align: center;
+}
+
+#card-contact{
+    margin-top: 80vh;
+    background-color: #403F3F;
+    color: white;
+    padding: 100px;
+}
+
+.contact-info{
+    width: 50%;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.contact-info h2{
+    font-size: 30pt;
+    margin: 0;
+}
+
+.contact-form{
+    width: 40%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 8vh;
+    display: flex;
+    justify-content: center;
+}
+
+.contact-form label{
+   margin-bottom: 20px;
+}
+
+#subscribe{
+    padding: 20px 75px;
+    border: none;
+}
+
+#subscribe ::placeholder{
+    text-align: start !important;
+}
+
+.btn-submit{
+    padding: 20px 75px;
+    background-color: #D53711;
+    color: white;
+    border: none;
+    margin-left: -10px;
+}
+
+footer{
+    text-align: center;
+}
 
