--- a/public/css/styleMobile.css
+++ b/public/css/styleMobile.css
@@ -267,6 +267,7 @@
         background-color: #D53711;
         color: white;
         border: none;
+        width: 94.7%;
     }
     #subscribe{
         padding: 20px 75px;
