--- a/public/css/style.css
+++ b/public/css/style.css
@@ -76,6 +76,7 @@ body{
         padding: 50px;
         margin-top: 5vh;
         font-size: 12pt;
+        text-align: center;
     }
 
     .info-list li{
@@ -98,7 +99,7 @@ body{
         font-size: 20pt;
     }
     #card-carrosel{
-        margin-top: 35vh;
+        margin-top: 15vh;
     }
 
     #card-carrosel h2{
@@ -221,7 +222,7 @@ body{
     }
 
     .home-internal{
-        padding-top: 100px;
+        padding-top: 50px;
         width: 60%;
         margin-left: auto;
         margin-right: auto;
@@ -229,13 +230,14 @@ body{
 
     .home-internal h2{
         font-size: 35pt;
+        text-align: center;
     }
     #note{
         background-color: #3699C7;
         width: 15%;
         color: white;
         padding: 25px 50px 50px 50px;
-        margin-top: 20vh;
+        margin-top: 15vh;
         position: absolute;
     }
 
@@ -256,13 +258,13 @@ body{
         justify-content: center;
     }
     #img-home img{
-        max-width: 700px;
+        max-width: 800px;
     }
 
     #img-home{
         float: right;
-        width: 65%;
-        margin-top: 10vh;
+        width: 70%;
+        margin-top: 5vh;
     }
 
     .alt{
@@ -272,7 +274,7 @@ body{
     }
 
     #card-contact{
-        margin-top: 110vh;
+        margin-top: 80vh;
         background-color: #403F3F;
         color: white;
         padding: 100px;
