--- a/public/css/style.css
+++ b/public/css/style.css
@@ -289,6 +289,7 @@ body{
     .contact-info h2{
         font-size: 30pt;
         margin: 0;
+        padding: 0px 100px;
     }
 
     .contact-form{
